# minesweeper

./: .gitignore  CMakeLists.txt  README.md  config.h  constants.h  game+game.h  game+leaderboard.h  game+welcome.h  game.h  leaderboard.h  main.cpp  textures.h  tile.h
files/: config.cfg  leaderboard.txt
